Set producer planned downtime
