# client/docs/swagger-ui/swagger.yaml
@@ -141,6 +141,54 @@ paths:
           format: uint64
       tags:
         - Query
+  /bor/producers/planned-downtime/{producer_id}:
+    get:
+      summary: |-
+        GetProducerPlannedDowntime queries the planned downtime for a given
+        producer id.
+      operationId: GetProducerPlannedDowntime
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              start_timestamp:
+                type: string
+                format: uint64
+              end_timestamp:
+                type: string
+                format: uint64
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    type_url:
+                      type: string
+                    value:
+                      type: string
+                      format: byte
+      parameters:
+        - name: producer_id
+          in: path
+          required: true
+          type: string
+          format: uint64
+      tags:
+        - Query
   /bor/spans/latest:
     get:
       summary: GetLatestSpan queries the latest span.
@@ -3427,6 +3475,15 @@ definitions:
           producer_count:
             type: string
             format: uint64
+  heimdallv2.bor.QueryProducerPlannedDowntimeResponse:
+    type: object
+    properties:
+      start_timestamp:
+        type: string
+        format: uint64
+      end_timestamp:
+        type: string
+        format: uint64
   heimdallv2.bor.QueryProducerVotesByValidatorIdResponse:
     type: object
     properties:
