# x/bor/types/bor.pb.go
@@ -213,45 +213,100 @@ func (m *ProducerVotes) GetVotes() []uint64 {
 	return nil
 }
 
+type TimeRange struct {
+	StartTimestamp uint64 `protobuf:"varint,1,opt,name=start_timestamp,json=startTimestamp,proto3" json:"start_timestamp,omitempty"`
+	EndTimestamp   uint64 `protobuf:"varint,2,opt,name=end_timestamp,json=endTimestamp,proto3" json:"end_timestamp,omitempty"`
+}
+
+func (m *TimeRange) Reset()         { *m = TimeRange{} }
+func (m *TimeRange) String() string { return proto.CompactTextString(m) }
+func (*TimeRange) ProtoMessage()    {}
+func (*TimeRange) Descriptor() ([]byte, []int) {
+	return fileDescriptor_ed6109dea23871eb, []int{3}
+}
+func (m *TimeRange) XXX_Unmarshal(b []byte) error {
+	return m.Unmarshal(b)
+}
+func (m *TimeRange) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	if deterministic {
+		return xxx_messageInfo_TimeRange.Marshal(b, m, deterministic)
+	} else {
+		b = b[:cap(b)]
+		n, err := m.MarshalToSizedBuffer(b)
+		if err != nil {
+			return nil, err
+		}
+		return b[:n], nil
+	}
+}
+func (m *TimeRange) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_TimeRange.Merge(m, src)
+}
+func (m *TimeRange) XXX_Size() int {
+	return m.Size()
+}
+func (m *TimeRange) XXX_DiscardUnknown() {
+	xxx_messageInfo_TimeRange.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_TimeRange proto.InternalMessageInfo
+
+func (m *TimeRange) GetStartTimestamp() uint64 {
+	if m != nil {
+		return m.StartTimestamp
+	}
+	return 0
+}
+
+func (m *TimeRange) GetEndTimestamp() uint64 {
+	if m != nil {
+		return m.EndTimestamp
+	}
+	return 0
+}
+
 func init() {
 	proto.RegisterType((*Span)(nil), "heimdallv2.bor.Span")
 	proto.RegisterType((*Params)(nil), "heimdallv2.bor.Params")
 	proto.RegisterType((*ProducerVotes)(nil), "heimdallv2.bor.ProducerVotes")
+	proto.RegisterType((*TimeRange)(nil), "heimdallv2.bor.TimeRange")
 }
 
 func init() { proto.RegisterFile("heimdallv2/bor/bor.proto", fileDescriptor_ed6109dea23871eb) }
 
 var fileDescriptor_ed6109dea23871eb = []byte{
-	// 449 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x92, 0x3f, 0x8f, 0xd3, 0x30,
-	0x18, 0xc6, 0xeb, 0xfe, 0x13, 0x75, 0xff, 0xa0, 0xb3, 0x40, 0x8a, 0x7a, 0x52, 0x2e, 0xea, 0x00,
-	0xd5, 0xa9, 0x24, 0xa8, 0x6c, 0x8c, 0x3d, 0x84, 0xc4, 0x82, 0x2a, 0x4e, 0xdc, 0xc0, 0x12, 0x39,
-	0xb1, 0xd5, 0x5a, 0x97, 0xfa, 0x8d, 0x6c, 0x27, 0xba, 0xfb, 0x16, 0x8c, 0x8c, 0x8c, 0x8c, 0xac,
-	0x7c, 0x83, 0x1b, 0x6f, 0x64, 0x42, 0xa8, 0x1d, 0xe0, 0x63, 0xa0, 0x24, 0xe7, 0x36, 0x5d, 0x18,
-	0x12, 0x59, 0xfe, 0x3d, 0x7e, 0xf4, 0x3e, 0x8f, 0x5e, 0xec, 0xac, 0xb9, 0xd8, 0x30, 0x9a, 0x24,
-	0xf9, 0x3c, 0x88, 0x40, 0x15, 0x9f, 0x9f, 0x2a, 0x30, 0x40, 0x46, 0x07, 0xe2, 0x47, 0xa0, 0xc6,
-	0x4f, 0x56, 0xb0, 0x82, 0x12, 0x05, 0xc5, 0xa9, 0x52, 0x8d, 0xbd, 0xda, 0x7b, 0x6d, 0xe8, 0x35,
-	0x0f, 0x72, 0x9a, 0x08, 0x46, 0x8d, 0xf5, 0x19, 0x9f, 0xd0, 0x8d, 0x90, 0x10, 0x94, 0xff, 0xea,
-	0x6a, 0xf2, 0xa3, 0x89, 0xdb, 0x97, 0x29, 0x95, 0xe4, 0x29, 0x6e, 0x0a, 0xe6, 0x20, 0x0f, 0x4d,
-	0xdb, 0x8b, 0xce, 0xb7, 0x3f, 0xdf, 0xcf, 0xd1, 0x87, 0xa6, 0x60, 0xe4, 0x19, 0xee, 0x6b, 0x43,
-	0x95, 0x09, 0xa3, 0x04, 0xe2, 0x6b, 0xa7, 0x59, 0xe7, 0xb8, 0x24, 0x8b, 0x02, 0x90, 0x09, 0xee,
-	0x71, 0xc9, 0x1e, 0x54, 0xad, 0xba, 0xea, 0x11, 0x97, 0xac, 0xd2, 0xbc, 0xc7, 0xc3, 0xfd, 0x44,
-	0xa1, 0xe6, 0xc6, 0x69, 0x7b, 0x68, 0xda, 0x9f, 0xbb, 0x7e, 0x2d, 0x5e, 0x39, 0xb8, 0x7f, 0x65,
-	0x65, 0x97, 0xdc, 0x2c, 0x7a, 0x77, 0xbf, 0xce, 0x1a, 0x95, 0xd7, 0x20, 0xaf, 0x01, 0xf2, 0x11,
-	0x13, 0xcd, 0x13, 0x1e, 0x1b, 0xce, 0xc2, 0x54, 0x01, 0xcb, 0x62, 0xae, 0xb4, 0xd3, 0xf1, 0x5a,
-	0xd3, 0xfe, 0xfc, 0xf4, 0x3f, 0xa6, 0x75, 0xc7, 0x13, 0xeb, 0xb0, 0xb4, 0x06, 0xe4, 0x39, 0x1e,
-	0x44, 0xa0, 0xc2, 0x78, 0x4d, 0x85, 0x0c, 0x05, 0x73, 0xba, 0x1e, 0x9a, 0xf6, 0xf6, 0x99, 0x23,
-	0x50, 0x17, 0x05, 0x79, 0xc7, 0x26, 0x5f, 0x10, 0xee, 0x2e, 0xa9, 0xa2, 0x1b, 0x4d, 0x7c, 0xfc,
-	0x58, 0xa7, 0x4a, 0x48, 0x13, 0xb2, 0x4c, 0x51, 0x23, 0x40, 0x1e, 0x57, 0x39, 0xaa, 0xe8, 0x9b,
-	0x07, 0x48, 0xce, 0xf1, 0x50, 0xa7, 0x54, 0x1e, 0xd4, 0x47, 0xc5, 0x0e, 0x0a, 0xb6, 0xd7, 0xce,
-	0xf0, 0xc8, 0xa6, 0x0b, 0x63, 0xc8, 0xa4, 0x39, 0xee, 0x77, 0x68, 0xe1, 0x45, 0xc1, 0x5e, 0xb7,
-	0xff, 0x7e, 0x3d, 0x43, 0x93, 0x19, 0x1e, 0xda, 0x40, 0x57, 0x60, 0xb8, 0x26, 0xa7, 0xb8, 0x93,
-	0x17, 0x07, 0x07, 0x79, 0xad, 0xc3, 0xdb, 0xea, 0x6e, 0xf1, 0xf6, 0x6e, 0xeb, 0xa2, 0xfb, 0xad,
-	0x8b, 0x7e, 0x6f, 0x5d, 0xf4, 0x79, 0xe7, 0x36, 0xee, 0x77, 0x6e, 0xe3, 0xe7, 0xce, 0x6d, 0x7c,
-	0x9a, 0xad, 0x84, 0x59, 0x67, 0x91, 0x1f, 0xc3, 0x26, 0x78, 0x79, 0xb3, 0x84, 0xe4, 0x76, 0x05,
-	0x32, 0xb0, 0xd5, 0xbe, 0xc8, 0xe7, 0xc1, 0x4d, 0xb9, 0xab, 0xe6, 0x36, 0xe5, 0x3a, 0xea, 0x96,
-	0x3b, 0xf5, 0xea, 0x5f, 0x00, 0x00, 0x00, 0xff, 0xff, 0x20, 0x8d, 0x4f, 0x3f, 0xca, 0x02, 0x00,
-	0x00,
+	// 487 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x93, 0x3f, 0x6f, 0xd3, 0x40,
+	0x18, 0xc6, 0x73, 0xf9, 0x27, 0x72, 0xf9, 0x83, 0x7a, 0x02, 0xc9, 0x6a, 0x25, 0xd7, 0xca, 0x00,
+	0x51, 0x15, 0x6c, 0x14, 0x36, 0xc6, 0x14, 0x21, 0xb1, 0xa0, 0xa8, 0x2d, 0x1d, 0x58, 0xac, 0xb3,
+	0xef, 0xe4, 0x9c, 0x6a, 0xdf, 0x59, 0x77, 0x17, 0xab, 0xfd, 0x16, 0x8c, 0x8c, 0x8c, 0x8c, 0xac,
+	0x7c, 0x83, 0x8e, 0x1d, 0x99, 0x10, 0x4a, 0x06, 0xf8, 0x18, 0xe8, 0xec, 0x5c, 0xe2, 0x30, 0x30,
+	0xd8, 0x7a, 0xf5, 0xfe, 0x1e, 0x3f, 0xf6, 0xf3, 0xbe, 0x3e, 0xe8, 0x2c, 0x29, 0xcb, 0x08, 0x4e,
+	0xd3, 0x62, 0x16, 0x44, 0x42, 0x9a, 0xcb, 0xcf, 0xa5, 0xd0, 0x02, 0x8d, 0xf6, 0xc4, 0x8f, 0x84,
+	0x3c, 0x3e, 0xc2, 0x19, 0xe3, 0x22, 0x28, 0xef, 0x95, 0xe4, 0xf8, 0x49, 0x22, 0x12, 0x51, 0x96,
+	0x81, 0xa9, 0xb6, 0x5d, 0xaf, 0x66, 0xa9, 0x34, 0xbe, 0xa1, 0x41, 0x81, 0x53, 0x46, 0xb0, 0xb6,
+	0xd6, 0xe3, 0xef, 0x4d, 0xd8, 0xbe, 0xcc, 0x31, 0x47, 0x4f, 0x61, 0x93, 0x11, 0x07, 0x78, 0x60,
+	0xd2, 0x9e, 0x77, 0xbe, 0xfe, 0xfe, 0x76, 0x06, 0x2e, 0x9a, 0x8c, 0xa0, 0x67, 0xb0, 0xaf, 0x34,
+	0x96, 0x3a, 0x8c, 0x52, 0x11, 0xdf, 0x38, 0xcd, 0x3a, 0x87, 0x25, 0x99, 0x1b, 0x80, 0xc6, 0xb0,
+	0x47, 0x39, 0xd9, 0xaa, 0x5a, 0x75, 0xd5, 0x23, 0xca, 0x49, 0xa5, 0x79, 0x0f, 0x87, 0xbb, 0xd7,
+	0x87, 0x8a, 0x6a, 0xa7, 0xed, 0x81, 0x49, 0x7f, 0xe6, 0xfa, 0xb5, 0x78, 0xe5, 0x57, 0xfa, 0xd7,
+	0x56, 0x76, 0x49, 0xf5, 0xbc, 0x77, 0xff, 0xf3, 0xb4, 0x51, 0x79, 0x0d, 0x8a, 0x1a, 0x40, 0x1f,
+	0x20, 0x52, 0x34, 0xa5, 0xb1, 0xa6, 0x24, 0xcc, 0xa5, 0x20, 0xab, 0x98, 0x4a, 0xe5, 0x74, 0xbc,
+	0xd6, 0xa4, 0x3f, 0x3b, 0xf9, 0x8f, 0x69, 0xdd, 0xf1, 0xc8, 0x3a, 0x2c, 0xac, 0x01, 0x7a, 0x0e,
+	0x07, 0x91, 0x90, 0x61, 0xbc, 0xc4, 0x8c, 0x87, 0x8c, 0x38, 0x5d, 0x0f, 0x4c, 0x7a, 0xbb, 0xcc,
+	0x91, 0x90, 0xe7, 0x86, 0xbc, 0x23, 0xe3, 0xcf, 0x00, 0x76, 0x17, 0x58, 0xe2, 0x4c, 0x21, 0x1f,
+	0x3e, 0x56, 0xb9, 0x64, 0x5c, 0x87, 0x64, 0x25, 0xb1, 0x66, 0x82, 0x1f, 0x8e, 0x72, 0x54, 0xd1,
+	0x37, 0x5b, 0x88, 0xce, 0xe0, 0x50, 0xe5, 0x98, 0xef, 0xd5, 0x07, 0x83, 0x1d, 0x18, 0xb6, 0xd3,
+	0x4e, 0xe1, 0xc8, 0xa6, 0x0b, 0x63, 0xb1, 0xe2, 0xfa, 0x70, 0xbe, 0x43, 0x0b, 0xcf, 0x0d, 0x7b,
+	0xdd, 0xfe, 0xf3, 0xe5, 0x14, 0x8c, 0xa7, 0x70, 0x68, 0x03, 0x5d, 0x0b, 0x4d, 0x15, 0x3a, 0x81,
+	0x9d, 0xc2, 0x14, 0x0e, 0xf0, 0x5a, 0xfb, 0x67, 0xab, 0xde, 0x38, 0x81, 0xbd, 0x2b, 0x96, 0xd1,
+	0x0b, 0xcc, 0x13, 0x5a, 0x46, 0x29, 0x37, 0xae, 0x59, 0x46, 0x95, 0xc6, 0x59, 0xfe, 0x6f, 0x14,
+	0x43, 0xaf, 0x2c, 0x34, 0x51, 0xcc, 0xe6, 0xf7, 0xea, 0xc3, 0x28, 0x94, 0x93, 0x9d, 0x76, 0xfe,
+	0xf6, 0x7e, 0xed, 0x82, 0x87, 0xb5, 0x0b, 0x7e, 0xad, 0x5d, 0xf0, 0x69, 0xe3, 0x36, 0x1e, 0x36,
+	0x6e, 0xe3, 0xc7, 0xc6, 0x6d, 0x7c, 0x9c, 0x26, 0x4c, 0x2f, 0x57, 0x91, 0x1f, 0x8b, 0x2c, 0x78,
+	0x79, 0xbb, 0x10, 0xe9, 0x5d, 0x22, 0x78, 0x60, 0x77, 0xf8, 0xa2, 0x98, 0x05, 0xb7, 0xe5, 0xa1,
+	0xd0, 0x77, 0x39, 0x55, 0x51, 0xb7, 0xfc, 0x79, 0x5f, 0xfd, 0x0d, 0x00, 0x00, 0xff, 0xff, 0x8e,
+	0x3b, 0x6d, 0x63, 0x33, 0x03, 0x00, 0x00,
 }
 
 func (this *Params) Equal(that interface{}) bool {
@@ -432,6 +487,39 @@ func (m *ProducerVotes) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	return len(dAtA) - i, nil
 }
 
+func (m *TimeRange) Marshal() (dAtA []byte, err error) {
+	size := m.Size()
+	dAtA = make([]byte, size)
+	n, err := m.MarshalToSizedBuffer(dAtA[:size])
+	if err != nil {
+		return nil, err
+	}
+	return dAtA[:n], nil
+}
+
+func (m *TimeRange) MarshalTo(dAtA []byte) (int, error) {
+	size := m.Size()
+	return m.MarshalToSizedBuffer(dAtA[:size])
+}
+
+func (m *TimeRange) MarshalToSizedBuffer(dAtA []byte) (int, error) {
+	i := len(dAtA)
+	_ = i
+	var l int
+	_ = l
+	if m.EndTimestamp != 0 {
+		i = encodeVarintBor(dAtA, i, uint64(m.EndTimestamp))
+		i--
+		dAtA[i] = 0x10
+	}
+	if m.StartTimestamp != 0 {
+		i = encodeVarintBor(dAtA, i, uint64(m.StartTimestamp))
+		i--
+		dAtA[i] = 0x8
+	}
+	return len(dAtA) - i, nil
+}
+
 func encodeVarintBor(dAtA []byte, offset int, v uint64) int {
 	offset -= sovBor(v)
 	base := offset
@@ -503,6 +591,21 @@ func (m *ProducerVotes) Size() (n int) {
 			l += sovBor(uint64(e))
 		}
 		n += 1 + sovBor(uint64(l)) + l
+	}
+	return n
+}
+
+func (m *TimeRange) Size() (n int) {
+	if m == nil {
+		return 0
+	}
+	var l int
+	_ = l
+	if m.StartTimestamp != 0 {
+		n += 1 + sovBor(uint64(m.StartTimestamp))
+	}
+	if m.EndTimestamp != 0 {
+		n += 1 + sovBor(uint64(m.EndTimestamp))
 	}
 	return n
 }
@@ -930,6 +1033,94 @@ func (m *ProducerVotes) Unmarshal(dAtA []byte) error {
 				}
 			} else {
 				return fmt.Errorf("proto: wrong wireType = %d for field Votes", wireType)
+			}
+		default:
+			iNdEx = preIndex
+			skippy, err := skipBor(dAtA[iNdEx:])
+			if err != nil {
+				return err
+			}
+			if (skippy < 0) || (iNdEx+skippy) < 0 {
+				return ErrInvalidLengthBor
+			}
+			if (iNdEx + skippy) > l {
+				return io.ErrUnexpectedEOF
+			}
+			iNdEx += skippy
+		}
+	}
+
+	if iNdEx > l {
+		return io.ErrUnexpectedEOF
+	}
+	return nil
+}
+func (m *TimeRange) Unmarshal(dAtA []byte) error {
+	l := len(dAtA)
+	iNdEx := 0
+	for iNdEx < l {
+		preIndex := iNdEx
+		var wire uint64
+		for shift := uint(0); ; shift += 7 {
+			if shift >= 64 {
+				return ErrIntOverflowBor
+			}
+			if iNdEx >= l {
+				return io.ErrUnexpectedEOF
+			}
+			b := dAtA[iNdEx]
+			iNdEx++
+			wire |= uint64(b&0x7F) << shift
+			if b < 0x80 {
+				break
+			}
+		}
+		fieldNum := int32(wire >> 3)
+		wireType := int(wire & 0x7)
+		if wireType == 4 {
+			return fmt.Errorf("proto: TimeRange: wiretype end group for non-group")
+		}
+		if fieldNum <= 0 {
+			return fmt.Errorf("proto: TimeRange: illegal tag %d (wire type %d)", fieldNum, wire)
+		}
+		switch fieldNum {
+		case 1:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field StartTimestamp", wireType)
+			}
+			m.StartTimestamp = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowBor
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.StartTimestamp |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 2:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field EndTimestamp", wireType)
+			}
+			m.EndTimestamp = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowBor
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.EndTimestamp |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
 			}
 		default:
 			iNdEx = preIndex
